--- a/configure.in
+++ b/configure.in
@@ -3,23 +3,27 @@
 
 AC_PREREQ(2.61)
 AC_INIT(Yog, 1.0a1, tom@nekomimists.ddo.jp)
-AM_INIT_AUTOMAKE()
-AC_CONFIG_SRCDIR([src/main.c])
+AM_INIT_AUTOMAKE([dist-bzip2])
+AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADER([config.h])
 
 # Checks for programs.
 AC_PROG_CC
+AM_PROG_CC_C_O
 
 # Checks for libraries.
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([stdlib.h])
+AC_CHECK_HEADERS([stdlib.h string.h strings.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
+AC_C_CONST
 AC_TYPE_SIZE_T
 
 # Checks for library functions.
+AC_FUNC_MALLOC
+AC_CHECK_FUNCS([atexit bzero])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
