--- a/configure.in
+++ b/configure.in
@@ -10,6 +10,8 @@ AC_CONFIG_HEADER([config.h])
 # Checks for programs.
 AC_PROG_CC
 AM_PROG_CC_C_O
+AC_PROG_YACC
+AM_PROG_LEX
 
 # Checks for libraries.
 
