--- a/Makefile.in
+++ b/Makefile.in
@@ -782,6 +782,9 @@ uninstall-am: uninstall-binPROGRAMS
 
 update-prototype:
 	python tools/update_prototype.py
+
+insts:
+	python tools/inst.py src/insts.def
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
