* fixed bugs about memory aliment and heap object.
--HG--
extra : convert_revision : 0cb75c7bc6f4193b77f151dc5ac627135888f76f

--- a/Makefile.in
+++ b/Makefile.in
@@ -189,7 +189,7 @@ yog_SOURCES = src/main.c \
 	      src/frame.c \
 	      src/thread.c
 
-yog_CFLAGS = -Iinclude
+yog_CFLAGS = -Iinclude -Wall
 AM_YFLAGS = -d
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
