--- a/Makefile.in
+++ b/Makefile.in
@@ -54,7 +54,8 @@ am_yog_OBJECTS = yog-main.$(OBJEXT) yog-value.$(OBJEXT) \
 	yog-array.$(OBJEXT) yog-parser.$(OBJEXT) yog-lexer.$(OBJEXT) \
 	yog-object.$(OBJEXT) yog-string.$(OBJEXT) yog-binary.$(OBJEXT) \
 	yog-compile.$(OBJEXT) yog-code.$(OBJEXT) yog-frame.$(OBJEXT) \
-	yog-thread.$(OBJEXT)
+	yog-thread.$(OBJEXT) yog-function.$(OBJEXT) \
+	yog-klass.$(OBJEXT)
 yog_OBJECTS = $(am_yog_OBJECTS)
 yog_LDADD = $(LDADD)
 yog_LINK = $(CCLD) $(yog_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o \
@@ -187,7 +188,9 @@ yog_SOURCES = src/main.c \
 	      src/compile.c \
 	      src/code.c \
 	      src/frame.c \
-	      src/thread.c
+	      src/thread.c \
+	      src/function.c \
+	      src/klass.c
 
 yog_CFLAGS = -Iinclude -Wall
 AM_YFLAGS = -d
@@ -290,6 +293,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-compile.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-error.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-frame.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-function.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-klass.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-lexer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-main.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog-object.Po@am__quote@
@@ -523,6 +528,34 @@ yog-thread.obj: src/thread.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/thread.c' object='yog-thread.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -c -o yog-thread.obj `if test -f 'src/thread.c'; then $(CYGPATH_W) 'src/thread.c'; else $(CYGPATH_W) '$(srcdir)/src/thread.c'; fi`
+
+yog-function.o: src/function.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -MT yog-function.o -MD -MP -MF $(DEPDIR)/yog-function.Tpo -c -o yog-function.o `test -f 'src/function.c' || echo '$(srcdir)/'`src/function.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog-function.Tpo $(DEPDIR)/yog-function.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/function.c' object='yog-function.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -c -o yog-function.o `test -f 'src/function.c' || echo '$(srcdir)/'`src/function.c
+
+yog-function.obj: src/function.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -MT yog-function.obj -MD -MP -MF $(DEPDIR)/yog-function.Tpo -c -o yog-function.obj `if test -f 'src/function.c'; then $(CYGPATH_W) 'src/function.c'; else $(CYGPATH_W) '$(srcdir)/src/function.c'; fi`
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog-function.Tpo $(DEPDIR)/yog-function.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/function.c' object='yog-function.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -c -o yog-function.obj `if test -f 'src/function.c'; then $(CYGPATH_W) 'src/function.c'; else $(CYGPATH_W) '$(srcdir)/src/function.c'; fi`
+
+yog-klass.o: src/klass.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -MT yog-klass.o -MD -MP -MF $(DEPDIR)/yog-klass.Tpo -c -o yog-klass.o `test -f 'src/klass.c' || echo '$(srcdir)/'`src/klass.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog-klass.Tpo $(DEPDIR)/yog-klass.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/klass.c' object='yog-klass.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -c -o yog-klass.o `test -f 'src/klass.c' || echo '$(srcdir)/'`src/klass.c
+
+yog-klass.obj: src/klass.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -MT yog-klass.obj -MD -MP -MF $(DEPDIR)/yog-klass.Tpo -c -o yog-klass.obj `if test -f 'src/klass.c'; then $(CYGPATH_W) 'src/klass.c'; else $(CYGPATH_W) '$(srcdir)/src/klass.c'; fi`
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog-klass.Tpo $(DEPDIR)/yog-klass.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/klass.c' object='yog-klass.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_CFLAGS) $(CFLAGS) -c -o yog-klass.obj `if test -f 'src/klass.c'; then $(CYGPATH_W) 'src/klass.c'; else $(CYGPATH_W) '$(srcdir)/src/klass.c'; fi`
 
 .l.c:
 	$(am__skiplex) $(SHELL) $(YLWRAP) $< $(LEX_OUTPUT_ROOT).c $@ -- $(LEXCOMPILE)
