* added tools/update_automake.py.
* added YogFuncBody to YogVal.

--HG--
extra : convert_revision : 2501330a1f186b5b1ad25348aa4b9c8a65d1efb6

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,21 +1,22 @@
 bin_PROGRAMS = yog
-yog_SOURCES = src/main.c \
-	      src/value.c \
-	      src/vm.c \
-	      src/error.c \
-	      src/st.c \
-	      src/array.c \
-	      src/parser.y \
-	      src/lexer.l \
-	      src/object.c \
-	      src/string.c \
-	      src/binary.c \
-	      src/compile.c \
-	      src/code.c \
-	      src/frame.c \
-	      src/thread.c \
-	      src/function.c \
-	      src/klass.c
+yog_SOURCES = src/array.c \
+	src/binary.c \
+	src/code.c \
+	src/compile.c \
+	src/error.c \
+	src/frame.c \
+	src/function.c \
+	src/int.c \
+	src/klass.c \
+	src/lexer.l \
+	src/main.c \
+	src/object.c \
+	src/parser.y \
+	src/st.c \
+	src/string.c \
+	src/thread.c \
+	src/value.c \
+	src/vm.c
 yog_CFLAGS = -Iinclude -Wall
 AM_YFLAGS = -d
 #AM_LFLAGS = --noline
@@ -25,3 +26,8 @@ proto:
 
 insts:
 	python tools/inst.py src/insts.def
+
+am:
+	python tools/update_automake.py
+
+# vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
