* added parser rules for command call.
--HG--
extra : convert_revision : c144917313b531874b58143d5c41752d0c4a0c80

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ yog_SOURCES = src/array.c \
 	src/value.c \
 	src/vm.c
 yog_CFLAGS = -Iinclude -Wall
-AM_YFLAGS = -d
+AM_YFLAGS = -d --verbose
 #AM_LFLAGS = --noline
 
 proto:
