* implemented testing framework.
--HG--
extra : convert_revision : f12e7e99bd2e5dd8fb5033b666f448520776a2dd

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,4 +32,10 @@ insts:
 am:
 	python tools/update_automake.py
 
+test: yog$(EXEEXT)
+	py.test
+
+clean-generic:
+	find . -name "*.pyc" -print0 | xargs --null rm -f
+
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
