--- a/Makefile.in
+++ b/Makefile.in
@@ -821,8 +821,6 @@ install-strip:
 	    echo "INSTALL_PROGRAM_ENV=STRIPPROG='$(STRIP)'"` install
 mostlyclean-generic:
 
-clean-generic:
-
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
 
@@ -919,6 +917,12 @@ insts:
 
 am:
 	python tools/update_automake.py
+
+test: yog$(EXEEXT)
+	py.test
+
+clean-generic:
+	find . -name "*.pyc" | xargs rm -f
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
