* added YogCode_dump.
--HG--
extra : convert_revision : bcf57943ee114d0f1fb9e03a33f6fa949aec98b1

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,7 @@ yog_SOURCES = src/array.c \
 	src/error.c \
 	src/frame.c \
 	src/function.c \
+	src/inst.c \
 	src/int.c \
 	src/klass.c \
 	src/lexer.l \
