* changed method calling protocol.
--HG--
extra : convert_revision : d192fde32018418782b99ceccc7e57f407f08ed9

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,7 @@ yog_SOURCES = src/array.c \
 	src/klass.c \
 	src/lexer.l \
 	src/main.c \
+	src/method.c \
 	src/object.c \
 	src/package.c \
 	src/parser.y \
